--- a/src/main/resources/assets/mca/lang/en_us.json
+++ b/src/main/resources/assets/mca/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "block.MCA.silver_block": "Block of Silver",
   "block.MCA.silver_ore": "Silver Ore",
+  "block.MCA.villager_spawner": "Villager Spawner",
+  "item.mca.villager_spawner": "Villager Spawner",
   "item.MCA.silver_ingot": "Silver Ingot",
   "itemGroup.MCA": "MCA",
   "itemGroupMCA.MCA": "MCA"
