fix texture loader

--- a/src/main/resources/assets/mca/lang/en_us.json
+++ b/src/main/resources/assets/mca/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "block.MCA.silver_block": "Block of Silver",
   "block.MCA.silver_ore": "Silver Ore",
+  "block.mca.metal_press": "Metal Press",
   "block.MCA.villager_spawner": "Villager Spawner",
   "block.mca.villager_spawner": "Villager Spawner",
   "item.mca.villager_spawner": "Villager Spawner",
