Added Metal Pressing Recipes and fixes

--- a/src/main/resources/assets/mca/lang/en_us.json
+++ b/src/main/resources/assets/mca/lang/en_us.json
@@ -2,19 +2,22 @@
   "block.MCA.silver_block": "Block of Silver",
   "block.MCA.silver_ore": "Silver Ore",
   "block.mca.metal_press": "Metal Press",
+  "item.MCA.silver_ingot": "Silver Ingot",
+
   "block.MCA.villager_spawner": "Villager Spawner",
   "block.mca.villager_spawner": "Villager Spawner",
   "item.mca.villager_spawner": "Villager Spawner",
 
   "block.mca.rose_gold_block": "Rose Gold Block",
-  "block.mca.rose_gold_ore": "Rose Gold ore",
+  "block.mca.rose_gold_ore": "Rose Gold Ore",
   "item.mca.rose_gold_ingot": "Rose Gold Ingot",
 
   "item.mca.spawn_egg": "Spawn Egg",
   "item.mca.egg_male": "Spawn Egg Male",
   "item.mca.egg_female": "Spawn Egg Female",
+
   "item.mca.villager_editor": "Villager Editor",
-  "item.MCA.silver_ingot": "Silver Ingot",
+
   "itemGroup.mca": "MCA",
   "itemGroup.MCA": "MCA",
   "itemGroupMCA.MCA": "MCA"
